ci/k8s/gpim/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    cloud.google.com/backend-config: '{"ports": {"3002":"customer-ui-gpim"}}'
    cloud.google.com/app-protocols: '{"http-port":"HTTP"}'
  name: customer-ui-gpim
  labels:
    app: customer-ui-gpim
  namespace: customer-ui
spec:
  ports:
    - port: 3002
      targetPort: 3002
      name: http-port
  selector:
    app: customer-ui-gpim
  type: ClusterIP
